[package]
name = "lam"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["sqlite"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
